--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Convert data from ReadySaltedCode KinectJSON server to BVH format",
   "main": "index.js",
   "scripts": {
+    "pretest": "tsc && cd test && tsc",
     "test": "mocha"
   },
   "author": "ReadySaltedCode CiC",
   "license": "GPL-3.0",
   "devDependencies": {
-    "mocha": "^3.4.2"
+    "@types/mocha": "^2.2.43",
+    "mocha": "^3.4.2",
+    "mocha-typescript": "^1.1.9",
+    "source-map-support": "^0.4.18"
   },
   "dependencies": {
     "three": "^0.86.0"
