Tidied up a load of logic - still having some issues with joints rotating unnaturally.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Convert data from ReadySaltedCode KinectJSON server to BVH format",
   "main": "build/index.js",
+  "directories" : {"lib":"build"},
   "scripts": {
     "pretest": "tsc && cd test && tsc",
     "test": "mocha"
